# graphite

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  graph.schema  graphite.yaml  package.json
.cargo/: config.toml
.github/workflows/: pages.yml
.omo/: boulder.json
.omo/drafts/: graphite-v1-compiler.md
.omo/evidence/: task-1-graphite-v1-compiler.txt
.omo/plans/: graphite-v1-compiler.md
docs/: index.html
docs/adr/: ai-protocol.html  anchor-syntax.html  clap-ergonomics-adr.html  compiler-pipeline.html  edge-narrative.html  heading-depth.html  index-pattern.html  index.html  rendering.html  schema-design.html  serde-yaml-schema-adr.html  stable-identity.html  tutoring-errors.html
docs/architecture/: clap-cli.html  index.html  schema-driven-graph.html
docs/compliance/: index.html  traceability-policy.html
docs/guide/: ai-workflow.html  index.html
docs/index/: adr.html  architecture.html  compliance.html  guide.html  index.html  infra.html  requirement.html  root.html  runbook.html  service.html  spec.html  test.html
docs/infra/: distribution-pipeline.html  index.html
docs/requirement/: audience-requirement.html  cli-simplicity-req.html  compiler-requirement.html  index.html  schema-flexibility-req.html  self-hosting-requirement.html
docs/runbook/: index.html  validation-runbook.html
docs/service/: cli.html  compiler.html  index.html
docs/spec/: index.html  root.html  spec-01-01-graph.html  spec-01-02-node.html  spec.html  (+29 more)
graphite-cli/: Cargo.toml
graphite-cli/src/: main.rs
graphite-core/: Cargo.toml
graphite-render/: Cargo.toml
(+94 files in other folders)
